--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ not displayed. The information between the BODY and /BODY tags is displayed.-->
 </head>
 <!-- The information between the BODY and /BODY tags is displayed.-->
 <body>
+<form action="/action_page.php">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
+</form>
 <h1>Enter the main heading, usually the same as the title.</h1>
 <p>Be <b>bold</b> in stating your key points. Put them in a list: </p>
 <ul>
