--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
+<body>
+	<input type="button" value="Button 1" id="b1" onclick="txtToTable();"/>
+	<p id="pText">Click on a Button</p>
+</body>
+</html>
+
+<!--
+<!DOCTYPE html>
+<html>
 <head>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="text-html.py"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
@@ -21,3 +32,4 @@
  
 </body>
 </html>
+-->
