Textfile to html table TESTING--updated path to definitions.txt.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 	<input type="button" value="Button 1" id="b1" onclick="txtToTable();"/>
-	<p id="pText">Click on a Button</p>
+	<p id="pText">Click on a Button123</p>
 </body>
 </html>
 
