--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<script type="text/javascript" src="script.js"></script>
+</head>
 <body>
 	<input type="button" value="Button 1" id="b1" onclick="txtToTable();"/>
-	<p id="pText">Click on a Button456</p>
+	<p id="pText">Click on a Button789</p>
 </body>
 </html>
 
